--- a/index.html
+++ b/index.html
@@ -1,21 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
 	<meta charset="UTF-8">
-	<title>Margenes automaticos</title>
+	<title>Margin Automático</title>
+	<link rel="shortcut icon" href="favicon.ico">
 	<link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
-		<div class="hijote">
-			<div class="hijo">
-				<p>En laboratoria nos aseguramos que nuestras coders no solo crezcab como desarrolladoras web, pero tambien como personas. Durante el programa crecen para ser lideres que confien en su futuro e inspiren a otras jvenes a seguir su camino.</p>
-			</div>	
-		</div>
-		<div class="hijito">
-			<div class="hijo">
-
-				<p>En laboratoria nos aseguramos que nuestras coders no solo crezcab como desarrolladoras web, pero tambien como personas. Durante el programa crecen para ser lideres que confien en su futuro e inspiren a otras jvenes a seguir su camino.</p>
-			</div>
-		</div>
+	<div id="uno" class="bloque">		
+		<p>En Laboratoria nos aseguramos que nuestras coders no sólo crezcan como desarrolladoras web, pero también como personas. Durante el programa crecen para ser líderes que confíen en su futuro e inspiren a otras jóvenes a seguir su camino.</p>
+	</div>
+	<div id="dos" class="bloque">		
+		<p>En Laboratoria nos aseguramos que nuestras coders no sólo crezcan como desarrolladoras web, pero también como personas. Durante el programa crecen para ser líderes que confíen en su futuro e inspiren a otras jóvenes a seguir su camino.</p>
+	</div>	
 </body>
 </html>
